<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:android1="http://schemas.android.com/apk/res/android">

    <string name="app_name">AD220Project3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string android:id="@+id/string1" name="action_move" android:layout_width="wrap_content" android:layout_height="wrap_content">Move to</string>
    <string android:id="@+id/string1" name="action_latlong" android:layout_width="wrap_content" android:layout_height="wrap_content">Lat, Long</string>
    <string android:id="@+id/string1" name="action_address" android:layout_width="wrap_content" android:layout_height="wrap_content">Address</string>
    <string android:id="@+id/string1" name="action_location" android:layout_width="wrap_content" android:layout_height="wrap_content">Location</string>
    <string android:id="@+id/string1" name="action_thislocation" android:layout_width="wrap_content" android:layout_height="wrap_content">This Location</string>
    <string android:id="@+id/string1" name="latitude" android:layout_width="wrap_content" android:layout_height="wrap_content">Latitude</string>
    <string android:id="@+id/string1" name="longitude" android:layout_width="wrap_content" android:layout_height="wrap_content">Longitude</string>
    <string android:id="@+id/string1" name="btnGoTo" android:layout_width="wrap_content" android:layout_height="wrap_content">Go to</string>
    <string android:id="@+id/string1" name="btnCancel" android:layout_width="wrap_content" android:layout_height="wrap_content">Cancel</string>
    <string android:id="@+id/string1" name="btnDelete" android:layout_width="wrap_content" android:layout_height="wrap_content">Delete</string>
    <string android:id="@+id/string1" name="address1" android:layout_width="wrap_content" android:layout_height="wrap_content">Address1</string>
    <string android:id="@+id/string1" name="address2" android:layout_width="wrap_content" android:layout_height="wrap_content">Address2</string>
    <string name="title_activity_custom2">Custom2</string>
    <string name="title_activity_splash">Drew\'s Map App</string>
    <string android:id="@+id/string1" name="action_about" android:layout_width="wrap_content" android:layout_height="wrap_content">About</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string android1:id="@+id/string1" name="btnOK" android1:layout_width="wrap_content" android1:layout_height="wrap_content">OK</string>
    <string android1:id="@+id/string1" name="strAbout1" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Drew\'s Map App - Created by Andrew Campbell.  08/01/14</string>
    <string name="title_activity_help">HelpActivity</string>
    <string android1:id="@+id/string1" name="strHelp1" android1:layout_width="wrap_content" android1:layout_height="wrap_content">The Drew\'s Map App, has three ways to navigate to a location</string>
    <string android1:id="@+id/string1" name="action_help" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Help</string>
    <string android1:id="@+id/string1" name="strHelp2" android1:layout_width="wrap_content" android1:layout_height="wrap_content">You can search by Latitude and Longitude.  On the top manu bar, click \'Move to\', \'Lat, Long\'.  Enter the latitude, then the longitude, and click \'Go to\'.</string>
    <string android1:id="@+id/string1" name="strHelp3" android1:layout_width="wrap_content" android1:layout_height="wrap_content">You can also move to a location by entering it\'s address, or location name.  On the upper menu bar, click on \'Move To\', \'Address\'.  Enter either the address or the place name (Such as Yellowstone).  Click the \'Go to\' button to go to the location.</string>
    <string android1:id="@+id/string1" name="strHelp4" android1:layout_width="wrap_content" android1:layout_height="wrap_content">You can also go to the location you are currently located.  Click \'Move to\', then click \'This Location\'.</string>
    <string android1:id="@+id/string1" name="strSetZoom" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Set Zoom</string>
    <string android1:id="@+id/string1" name="strZoomDefault" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Default Zoom</string>
    <string android1:id="@+id/string1" name="strSettingsHelp" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Select a zoom value from the dropdown list 1=world view, 21-street view.  Default=15.</string>
    <string android1:id="@+id/string1" name="radTrafficOn" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Traffic On</string>
    <string android1:id="@+id/string1" name="radTrafficOff" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Traffic Off</string>
    <string android1:id="@+id/string1" name="strChangeSettings" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Change Settings</string>
    <string android1:id="@+id/string1" name="strDefaultSettings" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Default Settings</string>
    <string android1:id="@+id/string1" name="action_time_track" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Time Track</string>
    <string android1:id="@+id/string1" name="action_time_track_start" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Start Time Track</string>
    <string android1:id="@+id/string1" name="action_time_track_stop" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Stop Time Track</string>
    <string android1:id="@+id/string1" name="action_time_track_open" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Open Time Track</string>
    <string android1:id="@+id/string1" name="action_time_track_save" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Save Time Track</string> 
	<string android1:id="@+id/string1" name="action_time_track_create" android1:layout_width="wrap_content" android:layout_height="wrap_content">Create Table</string>
	<string android1:id="@+id/string1" name="action_time_track_drop" android1:layout_width="wrap_content" android:layout_height="wrap_content">Drop Table</string>
	<string android1:id="@+id/string1" name="action_time_track_copy" android1:layout_width="wrap_content" android:layout_height="wrap_content">Copy Table</string>	
	<string android1:id="@+id/string1" name="action_position_track" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Pos. Track</string>
    <string android1:id="@+id/string1" name="action_position_track_start" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Start Pos. Track</string>
    <string android1:id="@+id/string1" name="action_position_track_stop" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Stop Pos. Track</string>
    <string android1:id="@+id/string1" name="action_mark_location" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Mark Location</string>
    <string android1:id="@+id/string1" name="action_position_track_open" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Open Pos. Track</string>
    <string android1:id="@+id/string1" name="action_position_track_save" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Save Pos. Track</string> 

    <string android1:id="@+id/string1" name="open_file" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Open File</string> 
	<string android1:id="@+id/string1" name="save_file" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Save File</string> 
	
	<string name="title_activity_track">TrackActivity</string>
    <string android1:id="@+id/string1" name="file_name" android1:layout_width="wrap_content" android1:layout_height="wrap_content">File Name</string> 
    	
    <string android1:layout_height="wrap_content" android1:id="@+id/string1" android1:layout_width="wrap_content" name="strHelp5">The default zoom start value is 15, but this can be reset using the settings tab.  The range for these values are 1=world view to 21= streeet view.  Also in the settings tab, you can set the map to show traffic on highways and major streets.  By default, this value is false.</string>
    <string android1:layout_height="wrap_content" android1:id="@+id/string1" android1:layout_width="wrap_content" name="strHelp6">This program also allows for two different types of tracking: time-tracking and position-tracking.</string>
    <string android1:layout_height="wrap_content" android1:id="@+id/string1" android1:layout_width="wrap_content" name="strHelp7">Time tracking will keep track of your position every 10 seconds.  To start time-tracking select the TIME TRACK menu item, and the Start Time Track.  You can stop time tracking in a similar manner when you are done tracking.  You are then allowed to save your time track.</string>
    <string android1:layout_height="wrap_content" android1:id="@+id/string1" android1:layout_width="wrap_content" name="strHelp8">Position tracking allows to to mark specific locations with unique images.  To use this functionality, you must first save images onto your Android device in the Pictures/icons/ directory.  You may need to manually create the icons directory, though the program is designed to create this directory if it has not yet been created.</string>
    <string android1:layout_height="wrap_content" android1:id="@+id/string1" android1:layout_width="wrap_content" name="strHelp9">Once you have image files within that directory, you can start position tracking by selecting POS. TRACK, New Template.  You should see a list of images in a list, which you will need to associate utterances (or word phrases) that signify that image.  Select the image, and click the Train button.  Do this as many times as you feel for all images.  Click the Save Template button to save your final template.  Choose a name for the template and click the Save Template button.</string>
    <string android1:layout_height="wrap_content" android1:id="@+id/string1" android1:layout_width="wrap_content" name="strHelp10">Once you have created your template, you can use it by Clicking POS. TRACK, Start Pos. Track.  For each location you wish to track click POS. TRACK, Mark Location.  Then utter the utterance associated with the image.  The image should appear on your map at your current location.  You can end position tracking any time by selecting POS. TRACK, Stop Pos. Track.  The application then allows you to save the Pos. Tracking.</string>
    
    <string android1:id="@+id/string1" name="train" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Train</string> 
    <string android1:id="@+id/string1" name="open_template" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Open File</string> 
    <string android1:id="@+id/string1" name="save_template" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Save Template</string> 
    <string android1:id="@+id/string1" name="action_position_track_open_template" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Open Template</string> 
    <string android1:id="@+id/string1" name="action_position_track_new_template" android1:layout_width="wrap_content" android1:layout_height="wrap_content">New Template</string> 
    
    
</resources>
