<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mti.ad220project3.MainActivity" >



    <item
        android:id="@+id/action_move"
        android:orderInCategory="100"
        android:title="@string/action_move"
        app:showAsAction="always">
    	<menu>
		    <item
		    	android:id="@+id/action_latlong"
        		android:orderInCategory="100"
        		android:title="@string/action_latlong"
        		app:showAsAction="always">
		    </item>
		    <item
		    	android:id="@+id/action_address"
        		android:orderInCategory="100"
        		android:title="@string/action_address"
        		app:showAsAction="always">
		    </item>	    
		    <item
		    	android:id="@+id/action_thislocation"
        		android:orderInCategory="100"
        		android:title="@string/action_thislocation"
        		app:showAsAction="always">
		    </item>		    
		    		    
		</menu>    
        
        
    </item>    
	<item
		android:id="@+id/action_position_track"
        android:orderInCategory="100"
        android:title="@string/action_position_track"
        app:showAsAction="always">
		<menu>
		    <item
		    	android:id="@+id/action_position_track_start"
        		android:orderInCategory="100"
        		android:title="@string/action_position_track_start"
        		app:showAsAction="always">
		    </item>
		    <item
		    	android:id="@+id/action_position_track_stop"
        		android:orderInCategory="100"
        		android:title="@string/action_position_track_stop"
				android:visible="false"
        		app:showAsAction="always">
		    </item>		   		    
		    <item
		    	android:id="@+id/action_mark_location"
        		android:orderInCategory="100"
        		android:title="@string/action_mark_location"
				android:visible="false"
        		app:showAsAction="always">
		    </item>	
		    <item
		    	android:id="@+id/action_position_track_open"
        		android:orderInCategory="100"
        		android:title="@string/action_position_track_open"
        		app:showAsAction="always">
		    </item>	
		    <item
		    	android:id="@+id/action_position_track_save"
        		android:orderInCategory="100"
        		android:title="@string/action_position_track_save"
				android:visible="false"
        		app:showAsAction="never">
		    </item>			    
		    <item
		    	android:id="@+id/action_position_track_open_template"
        		android:orderInCategory="100"
        		android:title="@string/action_position_track_open_template"
				android:visible="true"
        		app:showAsAction="never">
		    </item>		
		    <item
		    	android:id="@+id/action_position_track_new_template"
        		android:orderInCategory="100"
        		android:title="@string/action_position_track_new_template"
				android:visible="true"
        		app:showAsAction="never">
		    </item>				    
		</menu>
	    
	</item>
	
	<item
		android:id="@+id/action_time_track"
        android:orderInCategory="100"
        android:title="@string/action_time_track"
        app:showAsAction="always">
		<menu>
		    <item
		    	android:id="@+id/action_time_track_start"
        		android:orderInCategory="100"
        		android:title="@string/action_time_track_start"
        		app:showAsAction="always">
		    </item>
		    <item
		    	android:id="@+id/action_time_track_stop"
        		android:orderInCategory="100"
        		android:title="@string/action_time_track_stop"
				android:visible="false"
        		app:showAsAction="always">
		    </item>		   		    
		    <item
		    	android:id="@+id/action_time_track_open"
        		android:orderInCategory="100"
        		android:title="@string/action_time_track_open"
        		app:showAsAction="always">
		    </item>	
		    <item
		    	android:id="@+id/action_time_track_save"
        		android:orderInCategory="100"
        		android:title="@string/action_time_track_save"
				android:visible="false"
        		app:showAsAction="never">
		    </item>			    
		    
		</menu>
	    
	</item>
	<item
		android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always">
	</item>	    
	<item
		android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="always">
	</item>	        
	<item
		android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="always">
	</item>	     
</menu>

