<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mti.ad220project3.SettingsActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="155dp"
        android:text="@string/btnOK" />

    <Spinner
        android:id="@+id/spnZoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnOK"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="73dp"
        android:layout_marginRight="42dp" />

    <Button
        android:id="@+id/btnSetZoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnOK"
        android:layout_alignRight="@+id/btnOK"
        android:text="@string/strChangeSettings" />

    <Button
        android:id="@+id/btnZoomDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSetZoom"
        android:layout_alignBottom="@+id/btnSetZoom"
        android:layout_toRightOf="@+id/btnOK"
        android:text="@string/strDefaultSettings" />

    <TextView
        android:id="@+id/txtSettingsHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/spnZoom"
        android:layout_marginTop="36dp"
        android:text="@string/strSettingsHelp" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spnZoom"
        android:layout_alignRight="@+id/btnZoomDefault"
        android:layout_marginRight="14dp" >

        <RadioButton
            android:id="@+id/radTrafficOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radTrafficOn" />

        <RadioButton
            android:id="@+id/radTrafficOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radTrafficOff" />


    </RadioGroup>

</RelativeLayout>