<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txtLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/latitude"
        android:inputType="textEmailAddress|numberSigned" />

    <EditText
        android:id="@+id/txtLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtLatitude"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/longitude"
        android:inputType="textPassword|numberSigned" />

    <Button
        android:id="@+id/btnGoTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtLongitude"
        android:layout_below="@+id/txtLongitude"
        android:layout_marginLeft="67dp"
        android:text="@string/btnGoTo" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLongitude"
        android:layout_marginLeft="58dp"
        android:layout_toRightOf="@+id/btnGoTo"
        android:text="@string/btnCancel" />

</RelativeLayout>
