<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txtAddress1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/address1"
        android:inputType="text" />
        
    <EditText
        android:id="@+id/txtAddress2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtAddress1"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/address2"
        android:inputType="text" />

    <Button
        android:id="@+id/btnGoto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtAddress2"
        android:layout_below="@+id/txtAddress2"
        android:layout_marginLeft="67dp"
        android:text="@string/btnGoTo" />

    <Button
        android:id="@+id/btnCancel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnGoto2"
        android:layout_alignBottom="@+id/btnGoto2"
        android:layout_marginLeft="35dp"
        android:layout_toRightOf="@+id/btnGoto2"
        android:text="@string/btnCancel" />

</RelativeLayout>
