<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

     <ListView
        android:id="@+id/listviewfiles"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_alignLeft="@+id/textEditor"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
   
        android:visibility="visible" />

    <Button
        android:id="@+id/btnOpenTemplate"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listviewfiles"
        android:layout_marginLeft="5dp"
        android:text="@string/open_template"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnCancelTemplate"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listviewfiles"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/btnOpenTemplate"
        android:textSize="14sp"
        android:text="@string/btnCancel" />

    <Button
        android:id="@+id/btnDeleteTemplate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/listviewfiles"
        android:layout_marginRight="18dp"
        android:layout_marginTop="58dp"
        android:text="@string/btnDelete" />

    <TextView
        android:id="@+id/textViewFile"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnOpenTemplate"
        android:layout_marginTop="20dp"
        android:hint="@string/file_name"
        android:text=""
        android:textColor="@color/text_blue"
        android:textSize="@dimen/text_size" />

</RelativeLayout>