<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

     <ListView
        android:id="@+id/listviewfiles"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_alignLeft="@+id/textEditor"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
   
        android:visibility="visible" />
     
    <EditText
        android:id="@+id/txtFileName"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/listviewfiles"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
		android:layout_alignParentBottom="true"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:textSize="14sp"
        android:hint="@string/file_name"
        android:inputType="text" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/txtFileName"
        android:layout_below="@+id/listviewfiles"
        android:layout_marginLeft="5dp"
        android:textSize="14sp"
        android:text="@string/save_file" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listviewfiles"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/btnSave"
        android:textSize="14sp"
        android:text="@string/btnCancel" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/listviewfiles"
        android:layout_marginRight="18dp"
        android:layout_marginTop="58dp"
        android:text="@string/btnDelete" />

</RelativeLayout>
