<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

     <Spinner
        android:id="@+id/spinnerfiles"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_alignLeft="@+id/textEditor"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
   
        android:visibility="invisible" />

    <EditText
        android:id="@+id/txtFileName"
        android:layout_width="160dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spinnerfiles"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
		android:layout_alignParentBottom="true"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:textSize="14sp"
        android:hint="@string/file_name"
        android:inputType="text" />

    <Button
        android:id="@+id/btnOpen"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/txtFileName"
        android:layout_below="@+id/spinnerfiles"
        android:layout_marginLeft="5dp"
        android:textSize="14sp"
        android:text="@string/open_file" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerfiles"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/btnOpen"
        android:textSize="14sp"
        android:text="@string/btnCancel" />

</RelativeLayout>
